# Spielbub

./: .gitignore  Makefile.am  README.md  autogen.sh  buffers.c  buffers.h  check_cpu.c  configure.ac  console.c  console.h  context.c  context.h  cpu.c  cpu.h  cpu_ops.c  cpu_ops.h  debug.proto  graphics.c  graphics.h  hardware.h  ioregs.h  ipc.c  ipc.h  joypad.c  logging.c  logging.h  main.c  memory.c  memory.h  meta.c  meta.h  premake4.lua  probability_list.c  probability_list.h  rom.c  rom.h  sdl.c  shell.nix  spielbub.sublime-project  tests.c  (+3 more)
include/: bit.h  bitfield.h  buffers.h  context.h  cpu.h  cpu_ops.h  graphics  graphics.h  hardware.h  ioregs.h  joypad.h  logging.h  memory.h  meta.h  probability_list.h  rom.h  set.h  sound.h  spielbub.h  timers.h  util.h  window.h
include/debugger/: commands.h  debug.h
include/graphics/: tiles.h
spielbub.xcodeproj/: project.pbxproj
spielbub.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
spielbub.xcodeproj/xcuserdata/lorenz.xcuserdatad/xcschemes/: spielbub.xcscheme  xcschememanagement.plist
src/: buffers.c  context.c  cpu.c  cpu_ops.c  graphics.c  joypad.c  logging.c  memory.c  meta.c  murmur3.c  probability_list.c  rom.c  set.c  sound.c  timers.c  window.c
src/debugger/: commands.c  debug.c  main.c
src/graphics/: state-handlers.c  tiles.c
src/runner/: main.c
src/tests/: tests.c
